--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <h3 id="room"></h3>
     <button id="toggleVideo">비디오 OFF</button>
     <button id="toggleAudio">오디오 OFF</button>
-    <video id="localVideo" autoplay muted playsinline></video>
-    <video id="remoteVideo" autoplay playsinline></video>
+    <video id="video" autoplay playsinline></video>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="peer.js"></script>
